test/Fail/Issue3962.err
Issue3962.agda:12.8: error: [ParseError]
Unterminated '{-'
